--- a/css/style.css
+++ b/css/style.css
@@ -4160,3 +4160,110 @@ select {
 .product-slider-2 .post-slider {
   padding: 0;
 }
+
+/* #Blog Post
+================================================== */
+.blog-post {
+  padding: 6.35vw 0 8.33vw 0;
+}
+
+.blog-post .container {
+  width: 50%;
+}
+
+.blog-post .featured-img {
+  margin-bottom: 2vw;
+}
+
+.blog-post .featured-img img {
+  width: 100%;
+  height: 20.31vw;
+  object-fit: cover;
+  object-position: center;
+  border-radius: .5vw;
+}
+
+.blog-post .text {
+  padding: 0 4.16vw;
+}
+
+.blog-post .heading {
+  border-bottom: 1px solid #D6D6D6;
+  padding-bottom: 1.3vw;
+}
+
+.blog-post .social {
+  margin: 1.3vw 0;
+}
+
+.blog-post .img {
+  margin: 2vw 0;
+}
+
+.blog-post .img img {
+  width: 100%;
+  height: 19.16vw;
+  object-fit: cover;
+  object-position: center;
+  border-radius: .5vw;
+}
+
+.blog-post h3 {
+  margin: 2vw 0 .5vw 0;
+}
+
+@media (max-width: 1023.98px) {
+  .blog-post {
+    padding: 20vw 0 14.66vw 0;
+  }
+  
+  .blog-post .container {
+    width: 90%;
+  }
+  
+  .blog-post .featured-img {
+    margin-bottom: 6.65vw;
+  }
+  
+  .blog-post .featured-img img {
+    height: 62vw;
+    border-radius: 1.33vw;
+  }
+  
+  .blog-post .text {
+    padding: 0;
+    line-height: 1.16;
+  }
+  
+  .blog-post .heading {
+    padding-bottom: 6.65vw;
+    text-align: center;
+  }
+
+  .blog-post .heading h1 {
+    line-height: 1;
+    margin: 2vw 0;
+  }
+  
+  .blog-post .social {
+    margin: 6.65vw 0;
+  }
+
+  .blog-post .social ul {
+    justify-content: center;
+  }
+  
+  .blog-post .img {
+    margin: 6.65vw 0;
+  }
+  
+  .blog-post .img img {
+    height: 52vw;
+    border-radius: 1.33vw;
+  }
+  
+  .blog-post h3 {
+    margin: 6.65vw 0 2vw 0;
+    text-align: center;
+  }
+}
