[ADD] - Contact Page

--- a/css/style.css
+++ b/css/style.css
@@ -156,10 +156,31 @@ input {
   color: black;
 }
 
+.input-secondary {
+  border: none;
+  border: 1px solid #BFBFBF;
+  color: black;
+  width: 100%;
+  height: 2.4vw;
+  padding: 0 .78vw;
+  border-radius: .25vw;
+  color: #BFBFBF;
+}
+
+.input-secondary::placeholder {
+  color: #BFBFBF
+}
+
 @media (max-width: 1023.98px) {
   .input-primary {
     border-bottom: 1px solid #B1B1B1;
     padding-bottom: 1vw;
+  }
+
+  .input-secondary {
+    height: 8.66vw;
+    padding: 0 2vw;
+    border-radius: 5px;
   }
 }
 
@@ -182,11 +203,32 @@ select {
   width: 100%;
 }
 
+.select-secondary {
+  border: none;
+  border: 1px solid #BFBFBF;
+  color: #BFBFBF;
+  appearance: none;
+  background-image: url('../img/icons/chevron-down.svg');
+  background-repeat: no-repeat;
+  background-position: 3% 50%;
+  background-size: .78vw auto;
+  width: 100%;
+  height: 2.4vw;
+  border-radius: .25vw;
+  padding: 0 .78vw;
+}
+
 @media (max-width: 1023.98px) {
   .select-primary {
     border-bottom: 1px solid #B1B1B1;
     background-size: 2.93vw auto;
     padding-bottom: 1vw;
+  }
+
+  .select-secondary {
+    height: 8.66vw;
+    background-size: 2.93vw auto;
+    padding: 0 2vw;
   }
 }
 
@@ -4421,5 +4463,300 @@ select {
     width: 100%;
     height: 80vw;
     border-radius: 1.33vw;
+  }
+}
+
+/* #Contact
+================================================== */
+.contact-page .banner .circle {
+  position: absolute;
+  top: 90%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 20vw;
+  height: 20vw;
+}
+
+.contact {
+  padding-bottom: 8.6vw;
+  position: relative;
+  z-index: 20;
+  margin-top: -2.8vw;
+}
+
+.contact .container {
+  width: 75%;
+}
+
+.contact .icons {
+  margin-bottom: 7.8vw;
+}
+
+.contact .icons ul {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.contact .icons li:not(:last-child) {
+  margin-left: 2.6vw;
+}
+
+.contact .icons img {
+  margin: 0 auto;
+  border-radius: 50%;
+  box-shadow: 0 3px 20px rgba(0, 0, 0, .16);
+  margin-bottom: .5vw;
+  width: 5.6vw;
+}
+
+.contact .row {
+  display: flex;
+  align-items: center;
+}
+
+.contact .form {
+  flex: 0 0 33.17vw;
+  margin-left: 14vw;
+  padding: 3.38vw 4.5vw;
+  border-radius: .5vw;
+  box-shadow: 0 3px 15px rgba(0, 0, 0, .16);
+  position: relative;
+  background-color: white;
+}
+
+.contact .form::after {
+  content: '';
+  position: absolute;
+  top: .6vw;
+  left: .6vw;
+  width: 100%;
+  height: 100%;
+  background-color: #90FF00;
+  border-radius: .5vw;
+  z-index: -1;
+}
+
+.contact .form::before {
+  content: '';
+  position: absolute;
+  top: 1.2vw;
+  left: 1.2vw;
+  width: 100%;
+  height: 100%;
+  background-color: #E6FFC7;
+  border-radius: .5vw;
+  z-index: -2;
+}
+
+.contact .form .bottom {
+  text-align: center;
+  width: 12.4vw;
+  margin: 0 auto;
+  margin-top: 1.8vw;
+}
+
+.contact .form .bottom p {
+  line-height: 1.38;
+  margin-bottom: .6vw;
+}
+
+.contact .form form {
+  margin-top: 1vw;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.contact .form-group {
+  flex: 0 0 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.contact .form-group:not(:last-child) {
+  margin-bottom: 1.5vw;
+}
+
+.contact .form-group:nth-child(2),
+.contact .form-group:nth-child(3),
+.contact .form-group:nth-child(4),
+.contact .form-group:nth-child(5) {
+  flex: 0 0 47%;
+}
+
+.contact textarea {
+  resize: none;
+  border: 1px solid #BFBFBF;
+  border-radius: .25vw;
+  padding: .78vw;
+  color: #BFBFBF;
+}
+
+.contact label {
+  margin-bottom: .5vw;
+}
+
+.contact .text h2 {
+  margin-bottom: 2vw;
+}
+
+.contact .text p {
+  display: flex;
+  align-items: center;
+}
+
+.contact .text p img {
+  width: 1vw;
+  margin-left: .5vw;
+}
+
+.contact .text ul li {
+  display: flex;
+  align-items: center;
+  margin-bottom: 2.6vw;
+}
+
+.contact .text ul img {
+  width: 1.7vw;
+  height: 1.7vw;
+  object-fit: contain;
+  object-position: center;
+  flex-shrink: 0;
+}
+
+.contact .text ul p {
+  margin-right: 1vw;
+  padding-right: 1.3vw;
+  border-right: 1px solid #BFBFBF;
+}
+
+@media (max-width: 1023.98px) {
+  .contact-page .banner .circle {
+    width: 40vw;
+    height: 40vw;
+  }
+  
+  .contact {
+    padding-bottom: 13.33vw;
+    margin-top: -11.86vw;
+  }
+  
+  .contact .container {
+    width: 86%;
+  }
+  
+  .contact .icons {
+    margin-bottom: 10.33vw;
+  }
+  
+  .contact .icons li:not(:last-child) {
+    margin-left: 2.66vw;
+  }
+  
+  .contact .icons img {
+    margin-bottom: 2vw;
+    width: 23.73vw;
+  }
+  
+  .contact .row {
+    display: block;
+  }
+  
+  .contact .form {
+    margin-left: 0;
+    padding: 6.65vw 6vw 14.66vw 6vw;
+    border-radius: 1.33vw;
+    margin-bottom: 20vw;
+  }
+  
+  .contact .form::after {
+    top: 2vw;
+    left: 2vw;
+    border-radius: 1.33vw;
+  }
+  
+  .contact .form::before {
+    top: 4vw;
+    left: 4vw;
+    border-radius: 1.33vw;
+  }
+  
+  .contact .form .bottom {
+    width: 49vw;
+    margin-top: 9.33vw;
+  }
+  
+  .contact .form .bottom p {
+    line-height: 1.38;
+    margin-bottom: 1.33vw;
+  }
+  
+  .contact .form form {
+    margin-top: 4vw;
+    display: block;
+  }
+  
+  .contact .form-group:not(:last-child) {
+    margin-bottom: 4vw;
+  }
+  
+  .contact textarea {
+    border-radius: 5px;
+    padding: 2vw;
+  }
+  
+  .contact label {
+    margin-bottom: 1.33vw;
+  }
+
+  .contact .text {
+    text-align: center;
+  }
+  
+  .contact .text h2 {
+    margin-bottom: 4vw;
+  }
+  
+  .contact .text p img {
+    width: 4vw;
+    margin-left: 4vw;
+  }
+  
+  .contact .text ul li {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 6.65vw;
+  }
+  
+  .contact .text ul img {
+    width: 8.6vw;
+    height: 8.6vw;
+    object-fit: contain;
+    object-position: center;
+    flex-shrink: 0;
+  }
+  
+  .contact .text ul p {
+    margin-right: 0;
+    padding-right: 0;
+    margin-top: 2.66vw;
+    padding-top: 2.66vw;
+    border-right: none;
+    position: relative;
+  }
+
+  .contact .text ul p::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    height: 1px;
+    width: 18vw;
+    background-color: #BFBFBF;
   }
 }
